--- a/wp-content/themes/mypage/assets/css/main.css
+++ b/wp-content/themes/mypage/assets/css/main.css
@@ -85,4 +85,51 @@
     opacity: 1;
     pointer-events: auto;
   }
+
+  .shop-bento-item {
+    grid-column: span 1 / span 1;
+  }
+  .woocommerce-mini-cart__total {
+    @apply text-end;
+  }
+  .woocommerce-mini-cart__buttons {
+    @apply flex! justify-end! gap-2! mt-4!;
+  }
+  .woocommerce-mini-cart__buttons a.button {
+    @apply bg-black! text-white! rounded-full! text-sm!;
+  }
+  .wc-block-checkout__actions_row button {
+    @apply bg-black! text-white! rounded-full! text-base!;
+  }
+  .wc-block-components-form label {
+    @apply text-sm! font-semibold! text-slate-400!;
+  }
+  .wc-block-components-form input {
+    @apply rounded-2xl!;
+  }
+  .wc-block-components-form select {
+    @apply rounded-2xl!;
+  }
+  .woocommerce-cart-form table {
+    @apply rounded-2xl!;
+  }
+  .woocommerce .cart-collaterals .cart_totals table{
+    @apply rounded-2xl!;
+  }
+  .wc-proceed-to-checkout a{
+    @apply bg-black! text-white! rounded-full! text-base!;
+  }
+  .wc-block-components-radio-control-accordion-option .wc-block-components-radio-control-accordion-option--checked-option-highlighted {
+    @apply: rounded-2xl! text-white! bg-black!;
+  }
+
+  }
+
+
+
+@media (min-width: 768px) {
+  .shop-bento-item:nth-child(4n + 2),
+  .shop-bento-item:nth-child(4n + 3) {
+    grid-column: span 2 / span 2;
+  }
 }
